discussion/kv_engine/174241/174241_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: Add SnoozeTime based GlobalTask initialization functions

Change-Id: I3f78a4440bac9b7abcaa41686793f8f2274a5dd3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-29 17:54:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 17:56:04.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17205/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(desiredSnoozeTime.count() > 0);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17205/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17205/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16167/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
